Bug fix and new content
- Fixed some surgery recipe doubled.
- Adds 2 new workbenches.
- Adds archotech prostheses crafting.
- Adds modules crafting.
- Adds 3 new implants.
- Adds 3 new modules.
- Balancing some value.
- And many more.

--- a/Languages/English/Keyed/ITabs.xml
+++ b/Languages/English/Keyed/ITabs.xml
@@ -2,7 +2,7 @@
 <LanguageData>
 
 	<ReadyForBodyPartModule>ready for module</ReadyForBodyPartModule>
-	<RemoveModule>remove part module</RemoveModule>
+	<RemovePartModule>remove part module</RemovePartModule>
 	<RemovePartSystem>remove part system</RemovePartSystem>
 
 </LanguageData>
